# chicago-vibe-coding

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Makefile  PROMPTS.md  README.md
.claude/commands/: log-prompts.md
app/: drizzle.config.ts  package-lock.json  package.json
app/drizzle/: 0000_same_loa.sql
app/drizzle/meta/: 0000_snapshot.json  _journal.json
app/src/app/: actions.ts  layout.tsx  page.tsx
app/src/components/: app-sidebar.tsx  dashboard-token-button.tsx  databricks-dashboard.tsx  (+1 more)
docs/: 404.html  index.html
docs/assets/: index-Bgf0DvVX.css  index-ByP54Uo2.css  index-C7dnZTkp.js  index-DUuSUQbn.js  index-Dkqwks6j.js  md-0N9_Y9Op.js  md-13Sm-TxS.js  md-2YchauJz.js  md-B1SdOJMi.js  md-B3Ijj2P0.js  md-B8-_Nko0.js  md-BDcSF48j.js  md-BEmkEcH0.js  md-BK-1jqVz.js  md-BLY2XIGq.js  md-BPBJQf34.js  md-BZV6fR9Y.js  md-BmlB3Grj.js  md-BoVGn6S2.js  md-Bx32yU-x.js  md-C2q2oLCm.js  md-C4jDOF3G.js  md-CKEe4Zi0.js  md-CKsuzW0q.js  md-CdgZhJXu.js  md-CyBEc8ZL.js  md-D0a8Y-qJ.js  md-D7D1ESws.js  md-DJ3uFY1t.js  md-DfvhuRdU.js  md-Dm0_WMw8.js  md-DtrsLuF1.js  md-EaFyPW_S.js  md-JqbzBZwn.js  md-U4rTkHKz.js  md-aQuLhyaG.js  md-iG7fmwJh.js  md-x3pPFYMA.js
gateway/: .env.example  .gitignore  Makefile  pyproject.toml
gateway/src/gateway/: __init__.py  config.py  database.py  main.py
gateway/src/gateway/ingest/: __main__.py  example.py
gateway/src/gateway/proto/: device_ingest.proto  device_ingest_pb2.py
gateway/src/gateway/routers/: __init__.py  api.py  devices.py  ingest.py  status.py
mcp/: README.md  pyproject.toml
mcp/src/databricks_mcp/: __init__.py  server.py
react-native-expo/: app.json  package-lock.json  package.json
react-native-expo/components/: GyroscopeDisplay.tsx
react-native-expo/config/: config.ts
react-native-expo/constants/: Colors.ts
react-native-expo/services/: deviceService.ts  ingestService.ts
react-native-expo/types/: api.ts
react-native-expo/utils/: dataBuffer.ts  motionUtils.ts
slides/: package-lock.json  package.json  slides.md
(+82 files in other folders)
